syntax = "proto3";
package org.spoom.im.sdk.server.model.proto;
option java_outer_classname = "CmdMessageProto";
message CmdMessage {
    string msgId = 1;
    int32 chatType = 2;
    int32 action = 3;
    string from = 4;
    string to = 5;
    int64 time = 6;
    map<string,string> data =7;
}